--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+.hide-scrollbar {
+  overflow: auto;
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
